--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <h1>This is a heading</h1>
     <p>This is a paragraph. </p>
     <a href="https://google.com" target="_blank">abc</a>
+    <div class="a">A</div>
+    <div class="a transparent">B</div>
+    <div class="a">C</div>
 
 </body>
 
