--- a/html-css/zing.html
+++ b/html-css/zing.html
@@ -72,9 +72,17 @@
             justify-content: center;
             align-items: center;
             opacity: 0;
+            transition: all 0.5s;
+        }
+        .album-square .overlay i{
+            transform: scale(0);
+            transition: all 0.5s;
         }
         .album-square:hover .overlay{
             opacity: 1;
+        }
+        .album-square:hover .overlay i{
+            transform: scale(1);
         }
 
         .album-cover .overlay {
@@ -109,8 +117,6 @@
             <i class="far fa-play-circle"></i>
         </div>
     </div>
-
-
 </body>
 
 </html>
