--- a/demo2/index.html
+++ b/demo2/index.html
@@ -1,28 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo2</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 </head>
+
 <body>
     <div id="header">
         <div class="container">
-            <div class="logo">Logo</div>
+            <div class="logo">
+                <a href="">Logo</a>
+            </div>
             <div class="contact-info">
                 <ul>
                     <li>
                         <div class="contact-icon">
-                            
+                            <i class="far fa-play-circle"></i>
                         </div>
+                        <div class="contact-text">
+                            <label>Email</label>
+                            <span>Youremail@gmail.com</span>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="contact-icon">
+                            <i class="far fa-play-circle"></i>
+                        </div>
+                        <div class="contact-text">
+                            <label>Call</label>
+                            <span>036 975 9852</span>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="#" class="register">Free Register</a>
                     </li>
                 </ul>
             </div>
         </div>
     </div>
-    <div id="nav"></div>
+    <!-- Start menu -->
+    <div id="nav">
+        <div class="container">
+            <ul class="menu">
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">News</a></li>
+                <li><a href="">Product</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+            <div class="form-search">
+                <input type="text" class="keyword" placeholder="Search" />
+                <button type="submit" class="btn-search"></button>
+            </div>
+        </div>
+    </div>
+    <!-- Finish menu -->
     <div id="banner">BANNDER</div>
     <div id="feature">Feature</div>
     <div class="guidance">Guidance 1</div>
@@ -31,4 +69,5 @@
     <div id="project">Project</div>
     <div id="footer">Footer</div>
 </body>
+
 </html>
