--- a/demo2/index.html
+++ b/demo2/index.html
@@ -56,12 +56,16 @@
             </ul>
             <div class="form-search">
                 <input type="text" class="keyword" placeholder="Search" />
-                <button type="submit" class="btn-search"></button>
+                <button type="submit" class="btn-search">
+                    <i class="far fa-play-circle icon-search"></i>
+                </button>
             </div>
         </div>
     </div>
     <!-- Finish menu -->
-    <div id="banner">BANNDER</div>
+    <div id="banner">
+        <img src="./home/banner-t-1.jpg">
+    </div>
     <div id="feature">Feature</div>
     <div class="guidance">Guidance 1</div>
     <div id="service">Service</div>
