--- a/demo2/index.html
+++ b/demo2/index.html
@@ -65,9 +65,53 @@
     <!-- Finish menu -->
     <div id="banner">
         <img src="./home/banner-t-1.jpg">
+        <div class="overlay"></div>
     </div>
-    <div id="feature">Feature</div>
-    <div class="guidance">Guidance 1</div>
+    <div id="feature">
+        <div class="container">
+            <div class="feature-left">
+                <h2 class="feature-title">Our Main Features</h2>
+                <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum voluptates autem amet temporibus magni, similique dicta. Doloremque ratione ducimus, laboriosam accusamus, magni laborum corrupti porro minima optio, minus velit magnam.</p>
+                <div class="card active-card">
+                    <div class="icon">
+                        <i class="far fa-play-circle"></i>
+                    </div>
+                    <h2>Organization</h2>
+                    <p>Lorem ipsum dolor sit amet  magni laborum corrupti porro minima optio  magni laborum corrupti porro minima optio consectetur adipisicing elit.</p>
+                </div>
+                <div class="card">
+                    <div class="icon">
+                        <i class="far fa-play-circle"></i>
+                    </div>
+                    <h2>Organization</h2>
+                    <p>Lorem ipsum dolor sit amet  magni laborum corrupti porro minima optio  magni laborum corrupti porro minima optio consectetur adipisicing elit.</p>
+                </div>
+                <div class="card">
+                    <div class="icon">
+                        <i class="far fa-play-circle"></i>
+                    </div>
+                    <h2>Organization</h2>
+                    <p>Lorem ipsum dolor sit amet  magni laborum corrupti porro minima optio  magni laborum corrupti porro minima optio consectetur adipisicing elit.</p>
+                </div>
+                <div class="card">
+                    <div class="icon">
+                        <i class="far fa-play-circle"></i>
+                    </div>
+                    <h2>Organization</h2>
+                    <p>Lorem ipsum dolor sit amet  magni laborum corrupti porro minima optio  magni laborum corrupti porro minima optio consectetur adipisicing elit.</p>
+                </div>
+            </div>
+            <div class="feature-right">
+                <img src="./home/banner-t-2.jpg"/>
+                <h3>Read our success story Inspiration</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex quam quis error repudiandae sit expedita? Officiis alias saepe ex molestiae at quia exercitationem, repellat nemo magnam, obcaecati dolore ipsum harum.</p>
+                <a href="">Contact us</a>
+            </div>
+        </div>
+    </div>
+    <div class="guidance">
+        <h2>You allway get the best</h2>
+    </div>
     <div id="service">Service</div>
     <div class="guidance">Guidance 2</div>
     <div id="project">Project</div>
