--- a/demo2/index.html
+++ b/demo2/index.html
@@ -112,9 +112,69 @@
     <div class="guidance">
         <h2>You allway get the best</h2>
     </div>
-    <div id="service">Service</div>
-    <div class="guidance">Guidance 2</div>
-    <div id="project">Project</div>
+    <div id="service">
+        <div class="container">
+            <h3>Our Best Service</h3>
+            <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero vero quis nobis facilis quidem ratione saepe natus non est earum quam, optio adipisci minima ea sunt soluta officiis? Inventore, nisi.</p>
+            <ul class="our-service">
+                <li>
+                    <div class="icon">
+                        <i class="far fa-play-circle"></i>
+                    </div>
+                    <h2>Our best service</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </li>
+            </ul>
+            <ul class="our-service">
+                <li>
+                    <div class="icon">
+                        <i class="far fa-play-circle"></i>
+                    </div>
+                    <h2>Our best service</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </li>
+            </ul>
+            <ul class="our-service">
+                <li>
+                    <div class="icon">
+                        <i class="far fa-play-circle"></i>
+                    </div>
+                    <h2>Our best service</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </li>
+            </ul>
+            <ul class="our-service">
+                <li>
+                    <div class="icon">
+                        <i class="far fa-play-circle"></i>
+                    </div>
+                    <h2>Our best service</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </li>
+            </ul>
+            <ul class="our-service">
+                <li>
+                    <div class="icon">
+                        <i class="far fa-play-circle"></i>
+                    </div>
+                    <h2>Our best service</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </li>
+            </ul>
+            <ul class="our-service">
+                <li>
+                    <div class="icon">
+                        <i class="far fa-play-circle"></i>
+                    </div>
+                    <h2>Our best service</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="guidance">
+        <h2>You allway get the best</h2>
+    </div>
     <div id="footer">Footer</div>
 </body>
 
