change folder name

--- a/demo2/index.html
+++ b/demo2/index.html
@@ -1,181 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Demo2</title>
+    <title>Scroll Website</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 </head>
-
 <body>
-    <div id="header">
-        <div class="container">
-            <div class="logo">
-                <a href="">Logo</a>
-            </div>
-            <div class="contact-info">
-                <ul>
-                    <li>
-                        <div class="contact-icon">
-                            <i class="far fa-play-circle"></i>
-                        </div>
-                        <div class="contact-text">
-                            <label>Email</label>
-                            <span>Youremail@gmail.com</span>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="contact-icon">
-                            <i class="far fa-play-circle"></i>
-                        </div>
-                        <div class="contact-text">
-                            <label>Call</label>
-                            <span>036 975 9852</span>
-                        </div>
-                    </li>
-                    <li>
-                        <a href="#" class="register">Free Register</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+<!-- Navbar section -->
+<nav class="navbar">
+    <div class="navbar_container">
+        <a href="#home" id="navbar_logo">COLOR</a>
     </div>
-    <!-- Start menu -->
-    <div id="nav">
-        <div class="container">
-            <ul class="menu">
-                <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">News</a></li>
-                <li><a href="">Product</a></li>
-                <li><a href="">Contact</a></li>
-            </ul>
-            <div class="form-search">
-                <input type="text" class="keyword" placeholder="Search" />
-                <button type="submit" class="btn-search">
-                    <i class="far fa-play-circle icon-search"></i>
-                </button>
-            </div>
-        </div>
-    </div>
-    <!-- Finish menu -->
-    <div id="banner">
-        <img src="./home/banner-t-1.jpg">
-        <div class="overlay"></div>
-    </div>
-    <div id="feature">
-        <div class="container">
-            <div class="feature-left">
-                <h2 class="feature-title">Our Main Features</h2>
-                <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum voluptates autem amet temporibus magni, similique dicta. Doloremque ratione ducimus, laboriosam accusamus, magni laborum corrupti porro minima optio, minus velit magnam.</p>
-                <div class="card active-card">
-                    <div class="icon">
-                        <i class="far fa-play-circle"></i>
-                    </div>
-                    <h2>Organization</h2>
-                    <p>Lorem ipsum dolor sit amet  magni laborum corrupti porro minima optio  magni laborum corrupti porro minima optio consectetur adipisicing elit.</p>
-                </div>
-                <div class="card">
-                    <div class="icon">
-                        <i class="far fa-play-circle"></i>
-                    </div>
-                    <h2>Organization</h2>
-                    <p>Lorem ipsum dolor sit amet  magni laborum corrupti porro minima optio  magni laborum corrupti porro minima optio consectetur adipisicing elit.</p>
-                </div>
-                <div class="card">
-                    <div class="icon">
-                        <i class="far fa-play-circle"></i>
-                    </div>
-                    <h2>Organization</h2>
-                    <p>Lorem ipsum dolor sit amet  magni laborum corrupti porro minima optio  magni laborum corrupti porro minima optio consectetur adipisicing elit.</p>
-                </div>
-                <div class="card">
-                    <div class="icon">
-                        <i class="far fa-play-circle"></i>
-                    </div>
-                    <h2>Organization</h2>
-                    <p>Lorem ipsum dolor sit amet  magni laborum corrupti porro minima optio  magni laborum corrupti porro minima optio consectetur adipisicing elit.</p>
-                </div>
-            </div>
-            <div class="feature-right">
-                <img src="./home/banner-t-2.jpg"/>
-                <h3>Read our success story Inspiration</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex quam quis error repudiandae sit expedita? Officiis alias saepe ex molestiae at quia exercitationem, repellat nemo magnam, obcaecati dolore ipsum harum.</p>
-                <a href="">Contact us</a>
-            </div>
-        </div>
-    </div>
-    <div class="guidance">
-        <h2>You allway get the best</h2>
-    </div>
-    <div id="service">
-        <div class="container">
-            <h3>Our Best Service</h3>
-            <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero vero quis nobis facilis quidem ratione saepe natus non est earum quam, optio adipisci minima ea sunt soluta officiis? Inventore, nisi.</p>
-            <ul class="our-service">
-                <li>
-                    <div class="icon">
-                        <i class="far fa-play-circle"></i>
-                    </div>
-                    <h2>Our best service</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </li>
-            </ul>
-            <ul class="our-service">
-                <li>
-                    <div class="icon">
-                        <i class="far fa-play-circle"></i>
-                    </div>
-                    <h2>Our best service</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </li>
-            </ul>
-            <ul class="our-service">
-                <li>
-                    <div class="icon">
-                        <i class="far fa-play-circle"></i>
-                    </div>
-                    <h2>Our best service</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </li>
-            </ul>
-            <ul class="our-service">
-                <li>
-                    <div class="icon">
-                        <i class="far fa-play-circle"></i>
-                    </div>
-                    <h2>Our best service</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </li>
-            </ul>
-            <ul class="our-service">
-                <li>
-                    <div class="icon">
-                        <i class="far fa-play-circle"></i>
-                    </div>
-                    <h2>Our best service</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </li>
-            </ul>
-            <ul class="our-service">
-                <li>
-                    <div class="icon">
-                        <i class="far fa-play-circle"></i>
-                    </div>
-                    <h2>Our best service</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </li>
-            </ul>
-        </div>
-    </div>
-    <div class="guidance">
-        <h2>You allway get the best</h2>
-    </div>
-    <div id="footer">Footer</div>
+</nav>
 </body>
-
 </html>
